# cddlparser

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  cddlparser.py  pyproject.toml  requirements-dev.txt  tests.py
.github/workflows/: ci-javascript.yml  ci-python.yml  ci.yml
cddlparser/: __init__.py  ast.py  errors.py  lexer.py  parser.py  tokens.py  utils.py
python/: MANIFEST.in  README.md  cddlparser.py  mypy.ini  pyproject.toml  requirements-dev.txt
python/cddlparser/: ast.py  astencoder.py  parser.py  tokens.py
python/tests/: test_lexer.py  test_parser.py
src/: ast.py  constants.py  lexer.py  parser.py  tokens.py  utils.py
tests/: __main__.py  test_lexer.py  test_parser.py
tests/__fixtures__/: bytes.cddl  example.cddl  numbers.cddl  operators.cddl  ranges.cddl  tricky.cddl
tests/__snapshots__/: arrays.snap  byron.snap  bytes.snap  choices.snap  comments.snap  compositions.snap  coswid.snap  diddoc.snap  example.snap  jcrsnippet.snap  nested.snap  numbers.snap  occurrences.snap  operators.snap  precedence01.snap  prelude.snap  ranges.snap  reputon.snap  reputon_nocommas.snap  shelley.snap  socketplug.snap  tricky.snap  unwrapping.snap
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: ast.ts  cddlparser.ts  errors.ts  lexer.ts  parser.ts  tokens.ts  utils.ts
typescript/test/: lexer.js  parser.js
