[tool.pylint."MESSAGES CONTROL"]
disable = [
    "fixme",
    "invalid-name",
    "line-too-long",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
    "too-many-branches",
    "too-many-statements",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cddlparser"
version = "0.1.0"
authors = [
    {name = "François Daoust", email = "fd@tidoust.net"},
]
description = "A CDDL parser in Python"
urls = {homepage = "https://github.com/tidoust/cddlparser"}
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Topic :: Text Processing",
]
